fixed dependent bug