@@ -3,16 +3,17 @@ package io.files.decoders;
 import io.files.DataSeparator;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public abstract class StringDecoder<T> {
     public abstract T decode(String s);
     public List<String> parseAttributes(String s) {
-        return List.of(s.split(DataSeparator.ATTRIBUTE));
+        return new ArrayList<>(Arrays.asList(s.split(DataSeparator.ATTRIBUTE)));
     }
 
     public List<String> parseList(String s) {
         if (s.equals("EMPTY")) return new ArrayList<>();
-        return List.of(s.split(DataSeparator.LIST_ELEMENT));
+        return new ArrayList<>(Arrays.asList(s.split(DataSeparator.LIST_ELEMENT)));
     }
 }
